# flask-blog-app

./: .gitignore  README.md  pyproject.toml
src/blog_app/: __init__.py  forms.py  models.py  run.py
src/blog_app/static/: styles.css
src/blog_app/templates/: base_template.html  index.html  login_form.html  post_view.html
src/blog_app/templates/admin/: post_form.html  signup_form.html
