[project]
name = "blog-app"
version = "0.1.0"
description = "Simple Blog with Flask, PostgreSQL, Flask-Login, and Flask-WTF."
authors = [{ name = "Student", email = "student@example.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "Flask>=3.1.2",
    "Flask-WTF>=1.2.2",
    "Flask-Login>=0.6.3",
    "Flask-SQLAlchemy>=3.1.1",
    "psycopg[binary]>=3.2.10",
    "python-slugify>=8.0.4",
    "email-validator>=2.3.0",
    "python-dotenv>=1.0.1"
]

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blog_app"]